update sort parameter (#41)
* remove obsolete files

* update deps

* update sort parameter